# libftci2c

./: CMakeLists.txt  FT2232c.c  FT2232c.h  FT2232h.c  FT2232h.h  FT2232hMpsseI2c.c  FT2232hMpsseI2c.h  FTCI2C.c  FTCI2C.h  FTD2XX.h  README.md  WinTypes.h  example_ftd2xx  main.c  resource.h  stdafx.c  stdafx.h
